--- a/HerosAndMostersGUI/MainWindow.xaml
+++ b/HerosAndMostersGUI/MainWindow.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Canvas x:Name="screen">
-        
+        <ListBox Name="lbRight" Height="230" Canvas.Left="307" Canvas.Top="10" Width="200"/>
+        <ListBox Name="lbLeft" Height="230" Canvas.Left="10" Canvas.Top="10" Width="200"/>
+
     </Canvas>
 </Window>
