--- a/HerosAndMostersGUI/MainWindow.xaml
+++ b/HerosAndMostersGUI/MainWindow.xaml
@@ -2,9 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
+    
+        
+
     <Canvas x:Name="screen">
-        <ListBox Name="lbRight" Height="230" Canvas.Left="307" Canvas.Top="10" Width="200"/>
-        <ListBox Name="lbLeft" Height="230" Canvas.Left="10" Canvas.Top="10" Width="200"/>
+
+        <Label Name="label1" Content="Label" Canvas.Left="133" Canvas.Top="252"/>
 
     </Canvas>
+   
 </Window>
