--- a/HerosAndMostersGUI/CharacterSelect.xaml
+++ b/HerosAndMostersGUI/CharacterSelect.xaml
@@ -1,23 +1,28 @@
 ﻿<Window x:Class="HerosAndMostersGUI.CharacterSelect"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CharacterSelect" Height="400" Width="409" ResizeMode="NoResize" >
+        Title="CharacterSelect" Height="400" Width="410" ResizeMode="NoResize" >
 
     <Grid>
         <RadioButton Name="CharGreen" Content="Kip Springfield" HorizontalAlignment="Left" Margin="15,42,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <RadioButton Name="CharRed" Content="Tom Wilde" HorizontalAlignment="Left" Margin="15,80,0,0" VerticalAlignment="Top"/>
         <RadioButton Name="CharPurple" Content="El Benatar" HorizontalAlignment="Left" Margin="15,118,0,0" VerticalAlignment="Top"/>
+       
         <Rectangle Height="30" Width="30" Fill="LawnGreen" Margin="124,39,247,301"/>
         <Rectangle Height="30" Width="30" Fill="Red" Margin="124,77,247,263"/>
         <Rectangle Height="30" Width="30" Fill="Purple" Margin="124,115,247,225"/>
+              
+        <ListBox Name ="AblSelect" HorizontalAlignment="Left" Height="176" Margin="15,184,0,0" VerticalAlignment="Top" Width="172"/>
+        <ListBox Name="CharAbl"  HorizontalAlignment="Left" Height="100" Margin="221,184,0,0" VerticalAlignment="Top" Width="172" />
+        
+        <Button Content="&gt;" HorizontalAlignment="Left" Margin="192,201,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click_Add"/>
+        <Button Content="&lt;" HorizontalAlignment="Left" Margin="192,246,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click_Remove"/>
+        <Button Content="Ready" HorizontalAlignment="Left" Margin="308,333,0,0" VerticalAlignment="Top" Width="83" Click="Button_Click_Ready" Height="27"/>
+        
         <Label Content="Character Select:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
         <Label Content="Ability Select:" HorizontalAlignment="Left" Margin="10,153,0,0" VerticalAlignment="Top"/>
-        <Button Content="Ready" HorizontalAlignment="Left" Margin="308,333,0,0" VerticalAlignment="Top" Width="83" Click="Button_Click" Height="27"/>
-        <ListBox Name ="AblSelect" HorizontalAlignment="Left" Height="176" Margin="15,184,0,0" VerticalAlignment="Top" Width="172"/>
-        
-        <ListBox Name="CharAbl"  HorizontalAlignment="Left" Height="100" Margin="221,184,0,0" VerticalAlignment="Top" Width="172"/>
-        <Button Content="&gt;" HorizontalAlignment="Left" Margin="192,201,0,0" VerticalAlignment="Top" Width="24"/>
-        <Button Content="&lt;" HorizontalAlignment="Left" Margin="192,246,0,0" VerticalAlignment="Top" Width="24"/>
         <Label Content="Characters Abilities:" HorizontalAlignment="Left" Margin="221,153,0,0" VerticalAlignment="Top"/>
+        
+        
     </Grid>
 </Window>
