--- a/HerosAndMostersGUI/MainWindow.xaml
+++ b/HerosAndMostersGUI/MainWindow.xaml
@@ -1,13 +1,11 @@
 ﻿<Window x:Class="HerosAndMostersGUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="350" Width="525" WindowStartupLocation="CenterScreen" Background="Purple">
     
         
 
     <Canvas x:Name="screen">
-
-        <Label Name="label1" Content="Label" Canvas.Left="133" Canvas.Top="252"/>
 
     </Canvas>
    
