--- a/HerosAndMostersGUI/CharacterSelect.xaml
+++ b/HerosAndMostersGUI/CharacterSelect.xaml
@@ -13,18 +13,19 @@
         <Rectangle Height="30" Width="30" Fill="GreenYellow" Margin="124,115,247,225"/>
 
         <ListBox Name ="AblSelect" HorizontalAlignment="Left" Height="176" Margin="15,184,0,0" VerticalAlignment="Top" Width="172"/>
-        <ListBox Name="CharAbl"  HorizontalAlignment="Left" Height="100" Margin="221,184,0,0" VerticalAlignment="Top" Width="170" />
+        <ListBox Name="CharAbl"  HorizontalAlignment="Left" Height="105" Margin="221,196,0,0" VerticalAlignment="Top" Width="170" />
 
-        <Button Name ="btnAdd" Content="&gt;" HorizontalAlignment="Left" Margin="192,201,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click_Add"/>
-        <Button Name="btnRemove" Content="&lt;" HorizontalAlignment="Left" Margin="192,246,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click_Remove"/>
+        <Button Name ="btnAdd" Content="&gt;" HorizontalAlignment="Left" Margin="192,218,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click_Add"/>
+        <Button Name="btnRemove" Content="&lt;" HorizontalAlignment="Left" Margin="192,263,0,0" VerticalAlignment="Top" Width="24" Click="Button_Click_Remove"/>
         <Button Name="btnReady" Content="Ready" HorizontalAlignment="Left" Margin="308,333,0,0" VerticalAlignment="Top" Width="83" Click="Button_Click_Ready" Height="27"/>
 
         <Label Content="Character Select:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
         <Label Content="Ability Select:" HorizontalAlignment="Left" Margin="10,153,0,0" VerticalAlignment="Top"/>
-        <Label Content="Characters Abilities:" HorizontalAlignment="Left" Margin="215,153,0,0" VerticalAlignment="Top"/>
+        <Label Content="Characters Abilities:" HorizontalAlignment="Left" Margin="215,170,0,0" VerticalAlignment="Top"/>
 
-        <TextBox Name="txtDescriptions" HorizontalAlignment="Left" Height="110" Margin="221,36,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="170" Background="White" IsEnabled="False"/>
-        <Label Content="Ability Description:" HorizontalAlignment="Left" Margin="215,10,0,0" VerticalAlignment="Top"/>
+        <TextBox Name="txtDescriptions" HorizontalAlignment="Left" Height="139" Margin="221,31,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="170" Background="White" IsEnabled="False"/>
+        <Label Content="Ability Description:" HorizontalAlignment="Left" Margin="215,5,0,0" VerticalAlignment="Top"/>
+        <Label Content="* All buffs and debuffs are stackable." HorizontalAlignment="Left" Margin="192,301,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.63,0.737" Height="32" Width="212"/>
 
 
     </Grid>
